--- a/calculator.html
+++ b/calculator.html
@@ -11,6 +11,13 @@ var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 3);
 
 }
+function doublesquare() {
+
+var num = document.getElementById("n1");
+
+num.value = Math.pow(num.value, 4);
+
+}
 
 </script>
 
@@ -24,6 +31,7 @@ Number:
 <input type="text" id="n1"><p>
 
 <button onclick="cube()"> x^3 </button>
+<button onclick="doublesquare()"> x^4 </button>
 
 </body>
 
